syntax = "proto3";

option java_package = "de.niklasbednarczyk.openweathermap.data.settings.proto.units";
option java_multiple_files = true;

message SettingsUnitsProto {

  enum TemperatureUnitProto {
    CELSIUS = 0;
    FAHRENHEIT = 1;
  }

  TemperatureUnitProto temperatureUnit = 1;
  //TODO (#15) Add more units

}
